# interception-driver-fix

./: CMakeLists.txt  LICENSE  README.md  cpack-config-per-generator.cmake  inno_config.iss.in  inno_main.iss  main.rc.in  vcpkg.json
assets/: chip.txt
cmake/: disable_window_filtering.manifest  dpi_awareness_per_monitor_v2.manifest  long_path_aware.manifest  supported_os_win10_win11.manifest  supported_os_win7.manifest  supported_os_win8.1.manifest  supported_os_win8.manifest  supported_os_winvista.manifest  utf_8_active_code_page.manifest  utils.cmake
include/: hy_windows.h
src/: cli.hpp  constants.hpp  core.hpp  ensure_path_variable.hpp  install_uninstall.hpp  install_uninstall_service.hpp  main.cpp  mutex_utils.hpp  service.hpp  utils.hpp  version.hpp.in
